game Darts v 2.1 new design and effects in winner

--- a/templates/index.html
+++ b/templates/index.html
@@ -294,11 +294,19 @@
             opacity: 0.6;
             background-color: #0d1b2a;
         }
+
         .logo {
-            height: 200px;
+            height: 300px;
             opacity: 0.9;
             padding: 0px 0px 10px 0px;
         }
+
+
+        .logo:hover {
+            transform: scale(1.2); /* Увеличиваем логотип на 20% при наведении */
+        }
+
+
         .main-container {
             display: flex;
             justify-content: space-between;
